--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -58,75 +58,75 @@
        "      <td>73557</td>\n",
        "      <td>1</td>\n",
        "      <td>69</td>\n",
-       "      <td>203.0</td>\n",
+       "      <td>203</td>\n",
        "      <td>0.0</td>\n",
        "      <td>78.3</td>\n",
        "      <td>171.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>73558</td>\n",
        "      <td>1</td>\n",
        "      <td>54</td>\n",
-       "      <td>240.0</td>\n",
+       "      <td>240</td>\n",
        "      <td>119.0</td>\n",
        "      <td>89.5</td>\n",
        "      <td>176.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>73562</td>\n",
        "      <td>1</td>\n",
        "      <td>56</td>\n",
-       "      <td>144.0</td>\n",
+       "      <td>144</td>\n",
        "      <td>0.0</td>\n",
        "      <td>105.0</td>\n",
        "      <td>158.7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>73566</td>\n",
        "      <td>2</td>\n",
        "      <td>56</td>\n",
-       "      <td>266.0</td>\n",
+       "      <td>266</td>\n",
        "      <td>22.3</td>\n",
        "      <td>61.8</td>\n",
        "      <td>152.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>128</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>73567</td>\n",
        "      <td>1</td>\n",
        "      <td>65</td>\n",
-       "      <td>43.0</td>\n",
+       "      <td>43</td>\n",
        "      <td>39.1</td>\n",
        "      <td>65.3</td>\n",
        "      <td>172.4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>140</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -134,32 +134,32 @@
       ],
       "text/plain": [
        "      ID  Gender  Age  Caffeine (mg)  Alcohol (gm)  Weight (kg)  \\\n",
-       "0  73557       1   69          203.0           0.0         78.3   \n",
-       "1  73558       1   54          240.0         119.0         89.5   \n",
-       "2  73562       1   56          144.0           0.0        105.0   \n",
-       "3  73566       2   56          266.0          22.3         61.8   \n",
-       "4  73567       1   65           43.0          39.1         65.3   \n",
+       "0  73557       1   69            203           0.0         78.3   \n",
+       "1  73558       1   54            240         119.0         89.5   \n",
+       "2  73562       1   56            144           0.0        105.0   \n",
+       "3  73566       2   56            266          22.3         61.8   \n",
+       "4  73567       1   65             43          39.1         65.3   \n",
        "\n",
        "   Standing Height (cm)  Pulse regular or irregular?  \\\n",
-       "0                 171.3                          1.0   \n",
-       "1                 176.8                          1.0   \n",
-       "2                 158.7                          1.0   \n",
-       "3                 152.8                          1.0   \n",
-       "4                 172.4                          1.0   \n",
+       "0                 171.3                            1   \n",
+       "1                 176.8                            1   \n",
+       "2                 158.7                            1   \n",
+       "3                 152.8                            1   \n",
+       "4                 172.4                            1   \n",
        "\n",
        "   Systolic: Blood pressure mm Hg  Direct HDL-Cholesterol (mg/dL)  \\\n",
-       "0                           122.0                            65.0   \n",
-       "1                           156.0                            50.0   \n",
-       "2                           160.0                            38.0   \n",
-       "3                           128.0                            59.0   \n",
-       "4                           140.0                            79.0   \n",
+       "0                             122                              65   \n",
+       "1                             156                              50   \n",
+       "2                             160                              38   \n",
+       "3                             128                              59   \n",
+       "4                             140                              79   \n",
        "\n",
        "   Avg Drinks per Day  Smoker?  \n",
-       "0                 1.0      3.0  \n",
-       "1                 4.0      2.0  \n",
-       "2                 1.0      3.0  \n",
-       "3                 1.0      1.0  \n",
-       "4                 3.0      1.0  "
+       "0                   1        3  \n",
+       "1                   4        2  \n",
+       "2                   1        3  \n",
+       "3                   1        1  \n",
+       "4                   3        1  "
       ]
      },
      "execution_count": 2,
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,66 +227,66 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>69</td>\n",
-       "      <td>203.0</td>\n",
+       "      <td>203</td>\n",
        "      <td>0.0</td>\n",
        "      <td>78.3</td>\n",
        "      <td>171.3</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>122</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>54</td>\n",
-       "      <td>240.0</td>\n",
+       "      <td>240</td>\n",
        "      <td>119.0</td>\n",
        "      <td>89.5</td>\n",
        "      <td>176.8</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>156</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>56</td>\n",
-       "      <td>144.0</td>\n",
+       "      <td>144</td>\n",
        "      <td>0.0</td>\n",
        "      <td>105.0</td>\n",
        "      <td>158.7</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>160</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>56</td>\n",
-       "      <td>266.0</td>\n",
+       "      <td>266</td>\n",
        "      <td>22.3</td>\n",
        "      <td>61.8</td>\n",
        "      <td>152.8</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>65</td>\n",
-       "      <td>43.0</td>\n",
+       "      <td>43</td>\n",
        "      <td>39.1</td>\n",
        "      <td>65.3</td>\n",
        "      <td>172.4</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -294,28 +294,28 @@
       ],
       "text/plain": [
        "   Gender  Age  Caffeine (mg)  Alcohol (gm)  Weight (kg)  \\\n",
-       "0       1   69          203.0           0.0         78.3   \n",
-       "1       1   54          240.0         119.0         89.5   \n",
-       "2       1   56          144.0           0.0        105.0   \n",
-       "3       2   56          266.0          22.3         61.8   \n",
-       "4       1   65           43.0          39.1         65.3   \n",
+       "0       1   69            203           0.0         78.3   \n",
+       "1       1   54            240         119.0         89.5   \n",
+       "2       1   56            144           0.0        105.0   \n",
+       "3       2   56            266          22.3         61.8   \n",
+       "4       1   65             43          39.1         65.3   \n",
        "\n",
        "   Standing Height (cm)  Systolic: Blood pressure mm Hg  \\\n",
-       "0                 171.3                           122.0   \n",
-       "1                 176.8                           156.0   \n",
-       "2                 158.7                           160.0   \n",
-       "3                 152.8                           128.0   \n",
-       "4                 172.4                           140.0   \n",
+       "0                 171.3                             122   \n",
+       "1                 176.8                             156   \n",
+       "2                 158.7                             160   \n",
+       "3                 152.8                             128   \n",
+       "4                 172.4                             140   \n",
        "\n",
        "   Direct HDL-Cholesterol (mg/dL)  Avg Drinks per Day  Smoker?  \n",
-       "0                            65.0                 1.0      3.0  \n",
-       "1                            50.0                 4.0      2.0  \n",
-       "2                            38.0                 1.0      3.0  \n",
-       "3                            59.0                 1.0      1.0  \n",
-       "4                            79.0                 3.0      1.0  "
+       "0                              65                   1        3  \n",
+       "1                              50                   4        2  \n",
+       "2                              38                   1        3  \n",
+       "3                              59                   1        1  \n",
+       "4                              79                   3        1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,26 +329,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data, target, random_state=27)"
+    "X_train, X_test, y_train, y_test = train_test_split(data, target, random_state=74)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9662921348314607"
+       "0.949438202247191"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,16 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9803370786516854"
+       "0.9662921348314607"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,25 +384,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.16967355220577182, 'Standing Height (cm)'),\n",
-       " (0.1547061637440938, 'Weight (kg)'),\n",
-       " (0.1344925050372837, 'Age'),\n",
-       " (0.13211497574757392, 'Direct HDL-Cholesterol (mg/dL)'),\n",
-       " (0.13028767517989298, 'Caffeine (mg)'),\n",
-       " (0.10474692998099777, 'Systolic: Blood pressure mm Hg'),\n",
-       " (0.07675031522321744, 'Alcohol (gm)'),\n",
-       " (0.055096215374335344, 'Avg Drinks per Day'),\n",
-       " (0.024151436102223804, 'Smoker?'),\n",
-       " (0.017980231404609352, 'Gender')]"
+       "[(0.18404916623820639, 'Weight (kg)'),\n",
+       " (0.17133725298647565, 'Standing Height (cm)'),\n",
+       " (0.13973547283261886, 'Age'),\n",
+       " (0.127800218057775, 'Caffeine (mg)'),\n",
+       " (0.11893844013292061, 'Direct HDL-Cholesterol (mg/dL)'),\n",
+       " (0.11268179490625106, 'Systolic: Blood pressure mm Hg'),\n",
+       " (0.056255069145367605, 'Avg Drinks per Day'),\n",
+       " (0.05497911164790952, 'Alcohol (gm)'),\n",
+       " (0.021133853275208243, 'Smoker?'),\n",
+       " (0.01308962077726722, 'Gender')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,6 +410,23 @@
    "source": [
     "sorted(zip(rf.feature_importances_, feature_names), reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = rf.predict(X_test)\n",
+    "pr = pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
