--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -346,7 +346,7 @@
     {
      "data": {
       "text/plain": [
-       "0.949438202247191"
+       "0.9410112359550562"
       ]
      },
      "execution_count": 6,
@@ -385,32 +385,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = rf.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.17368647714526886, 'Weight (kg)'),\n",
-       " (0.1675460529276453, 'Standing Height (cm)'),\n",
-       " (0.14726379858112593, 'Caffeine (mg)'),\n",
-       " (0.1369947120612948, 'Age'),\n",
-       " (0.1161020760101079, 'Direct HDL-Cholesterol (mg/dL)'),\n",
-       " (0.11520320850281532, 'Systolic: Blood pressure mm Hg'),\n",
-       " (0.060651700852683496, 'Alcohol (gm)'),\n",
-       " (0.05403943943292349, 'Avg Drinks per Day'),\n",
-       " (0.016246262581230346, 'Gender'),\n",
-       " (0.012266271904904733, 'Smoker?')]"
+       "[(0.1730966429522541, 'Standing Height (cm)'),\n",
+       " (0.16921384616625348, 'Weight (kg)'),\n",
+       " (0.15570386253498864, 'Age'),\n",
+       " (0.14073439280827985, 'Caffeine (mg)'),\n",
+       " (0.11748793274277008, 'Systolic: Blood pressure mm Hg'),\n",
+       " (0.10327707227823883, 'Direct HDL-Cholesterol (mg/dL)'),\n",
+       " (0.05962155081439755, 'Alcohol (gm)'),\n",
+       " (0.04960992836291953, 'Avg Drinks per Day'),\n",
+       " (0.018003692018943248, 'Smoker?'),\n",
+       " (0.013251079320954753, 'Gender')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +529,7 @@
        "[356 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,29 +541,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./random_forest.joblib']"
+       "['finalized_model.sav']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(rf, \"./random_forest.joblib\")"
+    "filename = 'finalized_model.sav'\n",
+    "joblib.dump(model, filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Caffeine (mg)</th>\n",
+       "      <th>Alcohol (gm)</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <th>Standing Height (cm)</th>\n",
+       "      <th>Pulse regular or irregular</th>\n",
+       "      <th>Systolic: Blood pressure mm Hg</th>\n",
+       "      <th>Direct HDL-Cholesterol (mg/dL)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73557</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>203.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>78.3</td>\n",
+       "      <td>171.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>73558</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>89.5</td>\n",
+       "      <td>176.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>73559</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88.9</td>\n",
+       "      <td>175.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>73560</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>137.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>73561</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>162.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID  Gender  Age  Caffeine (mg)  Alcohol (gm)  Weight (kg)  \\\n",
+       "0  73557       0   69          203.0           0.0         78.3   \n",
+       "1  73558       0   54          240.0         119.0         89.5   \n",
+       "2  73559       0   72           45.0           0.0         88.9   \n",
+       "3  73560       0    9            0.0           0.0         32.2   \n",
+       "4  73561       1   73           24.0           0.0         52.0   \n",
+       "\n",
+       "   Standing Height (cm)  Pulse regular or irregular  \\\n",
+       "0                 171.3                           0   \n",
+       "1                 176.8                           0   \n",
+       "2                 175.3                           0   \n",
+       "3                 137.3                           0   \n",
+       "4                 162.4                           0   \n",
+       "\n",
+       "   Systolic: Blood pressure mm Hg  Direct HDL-Cholesterol (mg/dL)  \n",
+       "0                           122.0                            65.0  \n",
+       "1                           156.0                            50.0  \n",
+       "2                           140.0                            60.0  \n",
+       "3                           108.0                            61.0  \n",
+       "4                           136.0                            85.0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Import reduced CSV\n",
     "df_reduced = pd.read_csv('Datasets/cleaned_data_reduced.csv')\n",
@@ -570,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,9 +715,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Caffeine (mg)</th>\n",
+       "      <th>Alcohol (gm)</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <th>Standing Height (cm)</th>\n",
+       "      <th>Systolic: Blood pressure mm Hg</th>\n",
+       "      <th>Direct HDL-Cholesterol (mg/dL)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>203.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>78.3</td>\n",
+       "      <td>171.3</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>89.5</td>\n",
+       "      <td>176.8</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88.9</td>\n",
+       "      <td>175.3</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>137.3</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>73</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>162.4</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Gender  Age  Caffeine (mg)  Alcohol (gm)  Weight (kg)  \\\n",
+       "0       0   69          203.0           0.0         78.3   \n",
+       "1       0   54          240.0         119.0         89.5   \n",
+       "2       0   72           45.0           0.0         88.9   \n",
+       "3       0    9            0.0           0.0         32.2   \n",
+       "4       1   73           24.0           0.0         52.0   \n",
+       "\n",
+       "   Standing Height (cm)  Systolic: Blood pressure mm Hg  \\\n",
+       "0                 171.3                           122.0   \n",
+       "1                 176.8                           156.0   \n",
+       "2                 175.3                           140.0   \n",
+       "3                 137.3                           108.0   \n",
+       "4                 162.4                           136.0   \n",
+       "\n",
+       "   Direct HDL-Cholesterol (mg/dL)  \n",
+       "0                            65.0  \n",
+       "1                            50.0  \n",
+       "2                            60.0  \n",
+       "3                            61.0  \n",
+       "4                            85.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Variable df\n",
     "data2 = df_reduced.drop(['Pulse regular or irregular', 'ID'], axis=1)\n",
@@ -593,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,9 +855,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9673842139595564"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf2 = tree.DecisionTreeClassifier()\n",
     "clf2 = clf2.fit(X_train2, y_train2)\n",
@@ -613,9 +877,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9804305283757339"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rf2 = RandomForestClassifier(n_estimators=200)\n",
     "rf2 = rf2.fit(X_train2, y_train2)\n",
@@ -624,18 +899,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.1805430091753232, 'Standing Height (cm)'),\n",
+       " (0.1700588217057279, 'Weight (kg)'),\n",
+       " (0.15787461471325434, 'Caffeine (mg)'),\n",
+       " (0.14774455863525274, 'Age'),\n",
+       " (0.14198165770561458, 'Direct HDL-Cholesterol (mg/dL)'),\n",
+       " (0.1223436906635673, 'Systolic: Blood pressure mm Hg'),\n",
+       " (0.06291005978469727, 'Alcohol (gm)'),\n",
+       " (0.01654358761656265, 'Gender')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sorted(zip(rf2.feature_importances_, feature_names), reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3762</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4291</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3485</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4006</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3498</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4751</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1600</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1287</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3021</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4272</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1533 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Prediction  Actual\n",
+       "3762           0       0\n",
+       "4291           0       0\n",
+       "3485           0       0\n",
+       "4006           0       0\n",
+       "3498           0       0\n",
+       "...          ...     ...\n",
+       "4751           0       0\n",
+       "1600           0       0\n",
+       "1287           0       0\n",
+       "3021           0       0\n",
+       "4272           0       0\n",
+       "\n",
+       "[1533 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions2 = rf2.predict(X_test2)\n",
     "pd.DataFrame({\"Prediction\": predictions2, \"Actual\": y_test2})"
@@ -679,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
